Fix styling for column/row and flexbox container, will no longer stretch container

--- a/styles.css
+++ b/styles.css
@@ -11,20 +11,25 @@ body {
 }
 
 .container{
-    margin: 0;
+   display: flex;
+   flex-wrap: wrap;
+   margin: 0;
+   width: 700px;
+   height:600px;
 }
 
 .row {
-    display: flex;
-
+  width: 100%;
+  display: flex;
+  margin: 0;
 }
 
 .column {
-    flex: 1;
-    border: 0.1px solid rgba(0, 0, 0, 0.062);
-    padding: 0.5em;
-    background-color: #689091;
-    align-self: center;
+  flex: 1;
+  flex-wrap: wrap;
+  border: 0.1px solid rgba(0, 0, 0, 0.062);
+  background-color: #689091;
+  
 }
 
 .flex{
@@ -37,12 +42,11 @@ body {
 }
 
 .game{
-
+    width: 90%;
     margin: 0px 50px;
 }
 
 .red{
-
     background-color: #5d8283;
     border: solid #d63644 30px;
     border-bottom: solid #e63946 100px;
